--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,10 +1,6 @@
-# These are supported funding model platforms
+# Ce sont des plateformes de modèles de financement pris en charge
 
 github: [Steve Aster Afovo]
-patreon: Steve Aster Afovo
-open_collective: # Replace with a single Open Collective username
-ko_fi: # Replace with a single Ko-fi username
-tidelift: npm/SteveAsterAfovo-package
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
