--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,9 +1,7 @@
 # Ce sont des plateformes de modèles de financement pris en charge
 
 github: [Steve Aster Afovo]
-community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
-liberapay: # Replace with a single Liberapay username
-issuehunt: # Replace with a single IssueHunt username
-otechie: # Replace with a single Otechie username
+community_bridge: Open source Community
+
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
 custom : ["https://direct.kkiapay.me/3343/parrainage-gitub"]
